...
  Hello: undefined;
  Profile: undefined;
};

export type BottomTabParamList = {
  HomeStack: undefined;
  Second: undefined;
};

const HomeStack = createNativeStackNavigator<HomeStackParamList>();
const Tab = createBottomTabNavigator<BottomTabParamList>();

function HomeStackNavigator() {
...
